[package]
name = "logs"
version = "0.2.0"
authors = ["wyhaya <wyhaya@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A simple terminal logger"
readme = "README.md"
homepage = "https://github.com/wyhaya/logs"
repository = "https://github.com/wyhaya/logs.git"

keywords = [
    "log",
    "terminal",
    "logger"
]

[features]
debug = []
trace = []
info = []
warn = []
error = []

[dependencies]
cfg-if = "1.0.0"
time = "0.1.44"